# figs

./: .gitignore  README.md  README.org  common.nix  config.sh  flake.nix  nvim.nix  private.nix  system.sh
colors/: saeparized.nix
colors/catppuccin/: mocha.nix
colors/cattpuccin/: mocha.nix
config/ghostty/: config
desktop/: common.nix  desktop.nix  kde.nix  rofi-catppucin-mocha-theme.rasi  ssh-agent.nix  wezterm.lua  xcape.nix  xmonad.nix  xsession
desktop/xmonad/: Main.hs  flake.nix  myXMonad.cabal
desktop/xmonad/lib/: MyWorkspaces.hs
desktop/xmonad/test/: MyWorkspacesSpec.hs
dev/: ideavimrc  java.nix
dev/flakes/java11/: flake.nix
dev/flakes/java21/: flake.nix
dev/flakes/rust/: flake.nix
helix/: config.toml
misc/: syncthing.nix
nixos/magma/: configuration.nix  hardware-configuration.nix
nushell/: config.nu  keybindings.nu
nvim/: init.lua  lazy-lock.json
nvim/after/ftplugin/: http.lua  java.lua  lua.lua  rust.lua
nvim/after/plugin/: init.lua
nvim/fnl/saep/: neotest.fnl  nvim-tree.fnl  settings.fnl
nvim/lua/saep/: catppuccin.lua  cmp.lua  float.lua  keys.lua  lsp.lua  mini.lua  neogit.lua  neotest.lua  neovide.lua  next.lua  noice.lua  nvim-tree.lua  orgmode.lua  settings.lua  snippets.lua  telescope.lua  toggleterm.lua  tree-sitter.lua
nvim/lua/saep/filetypes/: haskell.lua
nvim/lua/saep/plugins/: blink.lua  cmp.lua  conform.lua  conjure.lua  dap.lua  flatten.lua  fterm.lua  harpoon.lua  lspsaga.lua  lualine.lua  mini.lua  neogit.lua  neotest.lua  nvim-lint.lua  oil.lua  orgmode.lua  rest.lua  spider.lua  telescope.lua  toggleterm.lua  treesitter.lua  ts-autotag.lua  zen-mode.lua
nvim/snippets/: all.lua  clojure.lua  haskell.lua  lua.lua  rust.lua
scripts/: backup-to-usb.sh
tasks/: taskopenrc
zsh/: zshrc
zsh/custom/themes/: saep.zsh-theme
